minor change: make controller dan componen api test with documentation swagger
